Fixing title visibility in header in all pages

--- a/themes/application.css
+++ b/themes/application.css
@@ -1,3 +1,8 @@
+/* Header
+-----------------------------------------------------------------------------------------------------------*/
+.ui-title{
+	margin: 0.6em 10% 0.8em !important;
+}
 
 
 /* Font
@@ -42,3 +47,4 @@ input.bigCheckbox {
 	width: 40px; 
 	height: 40px; 
 }
+
